classDiagram

class ClassesEditPageComponent {
  <<Livewire Anonymous Component>>
  +bool exists
  +ClassModel class
  +int? academic_year
  +string class_code
  +int|string|null institute_id
  +int|string|null campus_id
  +int|string|null programme_id
  +mount(class) void
  +render()
  +institutes() Collection
  +campuses() Collection
  +programmes() Collection
  +rules() array
  +updatedInstituteId(value) void
  +save() void
  +with() array
}

class ClassModel {
  <<table: classes>>
  +int id
  +int academic_year
  +string class_code
  +int institute_id
  +int campus_id
  +int programme_id
  +institute() BelongsTo
  +campus() BelongsTo
  +programme() BelongsTo
  +students() BelongsToMany
}

class Institute {
  +int id
  +instituteTranslation() HasMany
  +campuses() BelongsToMany
}

class Campus {
  +int id
  +campusTranslation() HasMany
  +institutes() BelongsToMany
}

class Programme {
  +int id
  +int institute_id
  +string programme_code
  +institute() BelongsTo
  +modules() BelongsToMany
  +programmeTranslation() HasMany
}

class InstituteCampus {
  +int institute_id
  +int campus_id
}

class CampusTranslation {
  +int campus_id
  +string locale
  +string name
}

class InstituteTranslation {
  +int institute_id
  +string locale
  +string name
}

class ProgrammeTranslation {
  +int programme_id
  +string locale
  +string name
}

ClassesEditPageComponent ..> ClassModel : create/update record
ClassesEditPageComponent ..> Institute : selectable institutes
ClassesEditPageComponent ..> Campus : filtered by institute
ClassesEditPageComponent ..> Programme : filtered by institute
ClassesEditPageComponent ..> InstituteCampus : validation constraint

ClassModel "*" --> "1" Institute : belongsTo
ClassModel "*" --> "1" Campus : belongsTo
ClassModel "*" --> "1" Programme : belongsTo

Institute "*" -- "*" Campus : institute_campus
Institute "1" --> "*" InstituteTranslation : hasMany
Campus "1" --> "*" CampusTranslation : hasMany
Programme "1" --> "*" ProgrammeTranslation : hasMany

InstituteCampus .. Institute : pivot
InstituteCampus .. Campus : pivot
Programme "*" --> "1" Institute : belongsTo
